Kubernetes/2.3/src/2deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deploy-8

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-8-2
  namespace: deploy-8
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.1
          volumeMounts:
          - name: configmap-nginx
            mountPath: /usr/share/nginx/html/
      volumes:
        - name: configmap-nginx
          configMap:
            name: test-config2
            items:
              - key: "index"
                path: "index.html"

---
apiVersion: v1
kind: Service
metadata:
  name: svc8
  namespace: deploy-8
spec:
  selector:
    app: nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-deploy-8
  namespace: deploy-8
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: kuber-5.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc8
                port:
                  number: 80
  tls:
    - hosts:
       - kuber-5.local
      secretName: crt
